# crag

./: LICENSE  README.md  pyproject.toml
src/crag/: agent.py  main.py  utils.py
