[tool.poetry]
name = "crag"
version = "0.1.0"
description = ""
authors = ["Chris Felix <chrisfel@ca.ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.crag.main:run"